fixed cart overflow issue

--- a/components/Cart/Cart.module.scss
+++ b/components/Cart/Cart.module.scss
@@ -8,7 +8,7 @@
   overflow: hidden;
   width: 40rem;
 
-  transform: translate(100%);
+  width: 0;
 
   background-color: white;
   color: black;
@@ -21,13 +21,14 @@
 }
 
 .active {
-  transform: translate(0);
+  width: 40rem;
 }
 
 .container {
   padding: 3rem;
 
   height: 100%;
+  min-width: 40rem;
 
   display: grid;
   grid-template-rows: auto 1fr auto;
@@ -111,6 +112,8 @@
       align-items: center;
       justify-content: center;
 
+      height: 100%;
+
       padding-inline: 1rem;
 
       svg {
@@ -122,7 +125,7 @@
 
 .product {
   display: grid;
-  grid-template-columns: auto 1fr;
+  grid-template-columns: 40% 1fr;
   gap: 1rem;
 
   header {
@@ -152,7 +155,6 @@
 .imageContainer {
   border-radius: 5px;
 
-  max-height: 15rem;
   height: 100%;
   aspect-ratio: 1 / 1;
 
@@ -192,6 +194,7 @@
 
   .container {
     padding: 1rem;
+    min-width: 0;
 
     header {
       margin-top: 1rem;
